# ai_without_rag

./: .bandit  .env.example  .gitignore  README.md  fix_builtins.py  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml
.github/workflows/: python-package.yml
docs/: API.md  DEVELOPMENT.md  README.md  USAGE.md
src/ai_cli/: __main__.py  ai_chat.py  ask_service.py  cli.py  contracts.py  decorators.py
src/ai_cli/config/: rag_config.py
src/ai_cli/core/: api.py  exceptions.py  prompt_corrector.py  resilience.py
src/ai_cli/core/service/: __init__.py  ai_service.py  ask_service.py  embed_service.py
src/ai_cli/plugins/: builtins.py
src/ai_cli/providers/: __init__.py  adapters.py  auto_provider.py  base.py  bootstrap.py  cohere_provider.py  config.py  contracts.py  decorators.py  deepseek_provider.py  echo_provider.py  factory.py  gemini_provider.py  loader.py  openai.py  openai_embedding_provider.py  openai_provider.py  perplexity_provider.py  registry.py  registry_backup.py  resolver.py  spec.py  xAI_provider.py  zAI_provider.py
src/ai_cli/providers/deepseek/: deepseek_provider.py
src/ai_cli/rag/: __init__.py  chunker.py  document_loader.py  embeddings.py  in_memory.py  models.py  pipeline.py  retriever.py  vector_store.py
src/ai_cli/services/: chat_service.py  embedding_service.py
src/ai_cli/telemetry/: monitoring.py
src/ai_cli/utils/: secrets.py  test_mode.py  validation.py
tests/: test_ai_chat.py  test_ai_chat_coverage.py  test_ai_service.py  test_ai_service_additional.py  test_base.py  test_cli_additional.py  test_cli_bootstrap.py  test_cli_branches.py  test_cli_coverage.py  test_cli_extended.py  test_cli_extra_coverage.py  test_cli_interactive_coverage.py  test_cli_interactive_extra.py  test_cli_interactive_extra.py   test_cli_keyboard_interrupt.py  test_cli_missing_paths.py  test_cli_runtime.py  test_core_service_ask_service.py  test_coverage_boost.py  test_deepseek_provider.py  test_deepseek_provider_extra.py  test_deepseek_provider_more_coverage.py  test_embeddings.py  test_enhanced.py  test_gemeni_loaders.py  test_gemini_extended.py  test_gemini_provider.py  test_gemini_provider_missing_paths.py  test_gemini_provider_more_coverage.py  test_gemini_provider_shim.py  test_hello_world.py  test_imports.py  test_loader_coverage.py  test_monitoring.py  test_monitoring_additional.py  test_monitoring_coverage.py  test_monitoring_extended.py  test_openai_provider_additional.py  test_openai_provider_additional.py   test_openai_provider_more_coverage.py  (+27 more)
