[tool.poetry]
name = "ai-cli"
version = "0.2.0"
description = "AI CLI gateway for multi-provider LLM orchestration and RAG."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/ai-cli"
repository = "https://github.com/yourusername/ai-cli"
documentation = "https://github.com/yourusername/ai-cli/docs"
keywords = [
    "ai",
    "llm",
    "cli",
    "openai",
    "anthropic",
    "gemini",
    "grok",
    "cohere",
    "devops",
    "sre",
    "ai-gateway",
    "observability",
    "RAG",
    "vector-db",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
packages = [{ include = "ai_cli", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
anyio = "^4.4.0"
anthropic = "^0.25.0"
cohere = "^5.5.0"
google-generativeai = "^0.5.0"
groq = "^0.8.0"
httpx = "^0.27.0"
mistralai = "^1.0.0"
openai = "^1.30.0"
pydantic = "^2.7.0"
python-dotenv = "^1.0.1"
requests = "^2.32.0"
rich = "^13.7.0"
sentence-transformers = "^5.0.0"
structlog = "^24.2.0"
tenacity = "^8.3.0"
tiktoken = "^0.8.0"
typer = "^0.12.3"
prometheus-client = "^0.20.0"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-exporter-otlp = "^1.25.0"

# CLI entrypoints
[tool.poetry.scripts]
ai-cli = "ai_cli.cli:main"
ai-cli-rag = "ai_cli.rag:main"

# Optional RAG-related and heavy dependencies are grouped to avoid installing them by default.
[tool.poetry.group.rag.dependencies]
# High-level orchestration
langchain = "^0.3.0"
langchain-core = "^0.3.0"
langchain-community = "^0.3.0"

# Vector DBs / adapters
chromadb = "^0.5.0"
qdrant-client = "^1.6.0"
pymilvus = "^2.2.0"
weaviate-client = "^4.4.0"

# Embeddings / index / numeric
faiss-cpu = "^1.8.0"
numpy = "^2.0.0"
scikit-learn = "^1.2.2"

# Document parsing / NLP helpers
pypdf = "^5.0.0"
unstructured = "^0.7.0"
nltk = "^3.8.1"
markdown = "^3.7"
transformers = "^4.35.0"
sentencepiece = "^0.1.99"
ftfy = "^6.1.1"
datasets = "^4.8.5"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.0.0"
mkdocstrings = "^0.18.0"
sphinx = "^6.2.0"
sphinx-autodoc-typehints = "^1.23.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
pre-commit = "^3.7.1"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
pytest-timeout = "^2.3.1"
ruff = "^0.4.4"
types-requests = "^2.32.0.20240523"

[tool.poetry.extras]
# convenient aliases for optional groups
rag = [
    "langchain",
    "langchain-core",
    "langchain-community",
    "chromadb",
    "qdrant-client",
    "faiss-cpu",
    "numpy",
    "pypdf",
    "transformers",
]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 80
target-version = "py310"
lint.select = ["E", "F", "I", "UP", "B"]
lint.ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = """
-v
--strict-markers
--cov=src/ai_cli
--cov-report=term-missing
"""
markers = ["integration", "slow", "provider", "rag"]

[tool.coverage.run]
source = ["src/ai_cli"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
