[tool.poetry]
name = "ai-cli"
version = "0.2.0"
description = "AI CLI gateway for multi-provider LLM orchestration."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/ai-cli"
repository = "https://github.com/yourusername/ai-cli"
documentation = "https://github.com/yourusername/ai-cli/docs"
keywords = [
    "ai",
    "llm",
    "cli",
    "openai",
    "anthropic",
    "gemini",
    "grok",
    "cohere",
    "devops",
    "sre",
    "ai-gateway",
    "observability"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
packages = [{ include = "ai_cli", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
anyio = "^4.4.0"
anthropic = "^0.25.0"
cohere = "^5.5.0"
google-generativeai = "^0.5.0"
groq = "^0.8.0"
httpx = "^0.27.0"
mistralai = "^1.0.0"
openai = "^1.30.0"
pydantic = "^2.7.0"
python-dotenv = "^1.0.1"
requests = "^2.32.0"
rich = "^13.7.0"
structlog = "^24.2.0"
tenacity = "^8.3.0"
tiktoken = "^0.8.0"
typer = "^0.12.3"
prometheus-client = "^0.20.0"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-exporter-otlp = "^1.25.0"

# CLI entrypoints
[tool.poetry.scripts]
ai-cli = "ai_cli.cli:main"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.0.0"
mkdocstrings = "^0.18.0"
sphinx = "^6.2.0"
sphinx-autodoc-typehints = "^1.23.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
pre-commit = "^3.7.1"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
pytest-timeout = "^2.3.1"
ruff = "^0.4.4"
types-requests = "^2.32.0.20240523"

[tool.poetry.extras]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 80
target-version = "py310"
lint.select = ["E", "F", "I", "UP", "B"]
lint.ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["src/ai_cli"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = """
-v
--strict-markers
--cov=ai_cli
--cov-report=term-missing
"""
markers = ["integration", "slow", "provider"]