[tool.poetry]
name = "ai-cli"
version = "0.2.0"
description = "AI CLI gateway for multi-provider LLM orchestration."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/ai-cli"
repository = "https://github.com/yourusername/ai-cli"
documentation = "https://github.com/yourusername/ai-cli/docs"
keywords = [
    "ai",
    "llm",
    "cli",
    "openai",
    "anthropic",
    "gemini",
    "grok",
    "cohere",
    "devops",
    "sre",
    "ai-gateway",
    "observability"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
packages = [{ include = "ai_cli", from = "src" }]
 
[tool.poetry.dependencies]
python = "^3.10"
cohere = "^7.0.5"
google-genai = "^2.10.0"
openai = "^2.44.0"
requests = "^2.34.0"
prometheus-client = "^0.25.0"
opentelemetry-api = "^1.43.0"
opentelemetry-sdk = "^1.43.0"
opentelemetry-exporter-otlp = "^1.43.0"
 
# CLI entrypoints
google-generativeai = "^0.8.6"
[tool.poetry.scripts]
ai-cli = "ai_cli.cli:main"
 
[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.0.0"
mkdocstrings = "^0.18.0"
sphinx = "^6.2.0"
sphinx-autodoc-typehints = "^1.23.0"
 
[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
pre-commit = "^3.7.1"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
pytest-cov = ">=5,<8"
pytest-timeout = "^2.3.1"
ruff = "^0.15.22"
types-requests = "^2.32.0.20240523"
pylint = "^4.0.6"
bandit = "^1.9.4"
pyflakes = "^3.4.0"
 
[tool.poetry.extras]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings"]
 
[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
 
[tool.black]
line-length = 80
target-version = ["py310", "py311", "py312"]
 
[tool.ruff]
line-length = 80
target-version = "py310"
lint.select = ["E", "F", "I", "UP", "B"]
lint.ignore = ["E501"]
 
[tool.ruff.format]
quote-style = "double"
 
[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
 
[tool.coverage.report]
show_missing = true
skip_covered = true
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = """
--cov=src/ai_cli
--cov-branch
--cov-report=term-missing
--cov-fail-under=95
"""
markers = ["integration", "slow", "provider"]
 
[tool.coverage.run]
source = ["src/ai_cli"]
branch = true
 
[tool.pyrefly]
python-interpreter-path = ".venv/bin/python3.11"
search-path = ["src"]
project-includes = ["src", "tests"]